# hive

./: Hive.hs  README.md  hive.cabal  stack.yaml
app/: Main.hs
bot-vs-bot/: Main.hs
bot-vs-player/: Main.hs
future-moves-bot/: Main.hs
player-vs-bot/: Main.hs
src/: Hive.hs
src/Hive/: Bot.hs  Config.hs  Control.hs  DataBase.hs  Init.hs  Model.hs  Render.hs
src/Hive/Control/: Move.hs  Moves.hs  Winner.hs
src/Hive/Render/: Almost.hs  Draw.hs
