name:                hive
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Author name here
maintainer:          author@email.com
copyright:           2017 Author name here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     Hive
                       Hive.Model
                       Hive.Config
                       Hive.Init
                       Hive.Bot
                       Hive.Render
                       Hive.Render.Almost
                       Hive.Render.Draw
                       Hive.Control
                       Hive.Control.Moves
                       Hive.Control.Move
                       Hive.DataBase
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , gloss-juicy
                     , containers
                     , acid-state, mtl, safecopy >= 0.6
  default-language:    Haskell2010

executable hive
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base				 
                     , hive
                     , gloss
                     , acid-state, mtl, safecopy >= 0.6
  default-language:    Haskell2010

--executable player-vs-bot
--  hs-source-dirs:      player-vs-bot
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base				 
--                     , hive
--                     , gloss
--  default-language:    Haskell2010

--executable bot-vs-player
--  hs-source-dirs:      bot-vs-player
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base				 
--                     , hive
--                     , gloss
--  default-language:    Haskell2010

--executable bot-vs-bot
--  hs-source-dirs:      bot-vs-bot
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base				 
--                     , hive
--                     , gloss
--                    , stm
--                     , stm-lifted
--  default-language:    Haskell2010

test-suite hive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hive
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

